# matthuesman.com

./: .dockerignore  .gitignore  CMakeLists.txt  CNAME  Dockerfile  README.md  amplify.yml  astro.config.mjs  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.claire/worktrees/pedantic-meninsky/src/routes/: Header.svelte
.claude/: launch.json
.claude/projects/-Users-matt-Portfolio-Projects-matthuesman-com/memory/: MEMORY.md
.github/workflows/: astro.yml  deploy.yml
_app/: version.json
_app/immutable/assets/: _layout.DVRMAfCQ.css  _page._wFzFM_7.css
_app/immutable/chunks/: B7vCImwU.js  BQZlvMg9.js  BQs5503p.js  BegnznZ5.js  CwziFo7J.js  Cz3OzGN8.js  DI1X4jgS.js  DQNdy6zQ.js  DcUXzzdx.js  Dd5j1y-f.js  DnNZJyZi.js  VbmVDQn-.js  W4Wlf0mN.js
_app/immutable/entry/: app.4CxYr5it.js  app.BTZivlKr.js  app.BzMV1fpS.js  app.pCwZX63c.js  start.BweA5jVV.js  start.DfyM3dz7.js  start.kcI2l3yr.js  start.sRn9510N.js
_app/immutable/nodes/: 0.ClbuHtCy.js  1.BbNzW3Dn.js  1.CQ01VA1W.js  1.Do_yD3LT.js  1.y6Bf0aaQ.js  2.XP09oExZ.js  3.B68RCv3j.js
portfolio/portfolio/: settings.py
scripts/: setup_pyodide.js
src/: app.css  app.html
src/components/: Header.astro  HeaderLink.astro
src/components/layout/: Footer.astro  Header.astro  Socials.astro
src/components/ui/: ProjectCard.astro
src/layouts/: Layout.astro  MainLayout.astro
src/lib/: main.js
src/lib/actions/: reveal.ts
src/lib/components/: Badge.svelte  Button.svelte  Divider.svelte  Eyebrow.svelte  RoboticArm.svelte  Tag.svelte  Window.svelte
src/lib/data/: life.ts  projects.ts  skills.ts
src/lib/robotic_arm/: arm.ts  claw.ts  fk.ts  joint.ts  link.ts
src/lib/robotic_arm/py/: arm.py  arm_testing.py  controller.py  fk.py  ik.py  jacobian.py  joint.py  pid.py
src/lib/terminal/: commands.ts  filesystem.ts
src/lib/wasm/: arm_python.ts  loader.ts  terminal.ts
src/pages/: 404.astro  contact.astro  index.astro
src/routes/: +layout.svelte  +page.svelte  Banner.svelte  CTA.svelte  Footer.svelte  Header.svelte  HeaderItem.svelte  Melt.svelte  ParticleText.svelte  ProjectCard.svelte  SectionHeader.svelte  SkillBadge.svelte  Terminal.svelte
src/routes/404/: +page.svelte
src/routes/me/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/sections/: About.svelte  Contact.svelte  Experience.svelte  Life.svelte  Projects.svelte  Skills.svelte
src/scripts/: github.ts  updateGithubContent.ts
src/styles/: global.css
src/wasm/: main.c  wasm_interface.h
